# PARTs_WebAPI

./: .coveragerc  .dockerignore  .editorconfig  .env.example  .gitignore  ARCHITECTURE.md  CLEAN_ARCHITECTURE.md  CLEAN_ARCHITECTURE_SECURITY.py  CLEAN_ARCHITECTURE_SUMMARY.md  CLEAN_ARCHITECTURE_TEMPLATE.py  CONTRIBUTING.md  DB_Crea.sql  Dockerfile  Dockerfile copy  Dockerfile.preprod  Dockerfile.uat  Jenkinsfile  MIGRATION_GUIDE.md  Procfile  README.md  README.md.old  REFACTORING_SUMMARY.md  REORGANIZATION_SUMMARY.md  TESTING.md  apache2.conf  app.wsgi  coverage.json  crontab  db.sqlite3  delete_remote_files.py  docker-compose.debug.yml  docker-compose.preprod.yml  docker-compose.yml  dump.command  manage.py  new-scout-flow.md  pyproject.toml  pytest.ini  refresh.sql  refresh_script_uat.sql  (+3 more)
.github/workflows/: ci.yml  test-and-coverage.yml
admin/: models.py  serializers.py  urls.py  views.py
admin/migrations/: 0002_initial.py  0003_errorlog_traceback.py
alerts/: models.py  urls.py  util.py  util_alert_definitions.py  views.py
alerts/migrations/: 0001_initial.py  0002_rename_alert_id_alertchannelsend_alert.py  0004_alertchannelsend_tries.py  0006_rename_alert_comm_typ_channelsend_comm_typ_and_more.py  0009_alertedresource.py  0010_alter_alertedresource_foreign_id.py
api/: app.wsgi  settings.py  settings_dev.py  test_settings.py  urls.py  wsgi.py
api/api/: models.py  requirements.txt  serializers.py  urls.py
api/auth/: forms.py  models.py  security.py  send_email.py  serializers.py  urls.py  views.py
api/fixtures/: load.json  models.json
api/migrations/: 0001_initial.py  0002_alter_scoutfieldschedule_blue_one_and_more.py  0003_scoutfieldschedule_event_scoutpitschedule_event.py  0004_match.py  0005_event_competition_page_active.py  0006_event_address_event_event_url_event_gmaps_url_and_more.py  0007_event_webcast_url.py  0008_event_state_prov.py  0009_alter_event_date_end_alter_event_date_st.py  0010_alter_event_date_end_alter_event_date_st.py  0011_event_city.py  0012_competitionlevel.py  0013_competitionlevel_comp_lvl_order.py  0014_alter_match_comp_level.py  0015_alter_match_time.py  0016_match_match_key_alter_event_competition_page_active.py  0017_remove_match_match_key_alter_match_match_id.py  0018_scoutquestionsubtype.py  0019_scoutquestion_sq_sub_typ.py  0020_event_timezone.py
attendance/: models.py  serializers.py  urls.py  util.py  views.py
attendance/migrations/: 0001_initial.py  0002_meeting_rename_time_attendance_time_in_and_more.py  0003_historicalmeeting_description_and_more.py  0005_historicalmeeting_season_meeting_season.py  0006_attendance_approved_historicalattendance_approved.py  0007_attendance_season_historicalattendance_season.py  0008_remove_attendance_bonus_approved_and_more.py  0012_alter_historicalmeeting_description_and_more.py
docker/: Dockerfile  Dockerfile.uat  delete_remote_files.py  docker-compose.yml
docs/: DJANGO_BEST_PRACTICES.md  POETRY.md  README.md  TESTING.md
form/: models.py  serializers.py  urls.py  util.py  views.py
form/migrations/: 0002_rename_q_id_question_question_id_and_more.py  0008_rename_subtype_formsubtype.py  0009_formsubtype_order.py  0014_questionaggregatetype_questioncondition_and_more.py  0016_questionaggregate_active.py  0020_historicalresponse.py  0021_historicalresponse_archive_ind_response_archive_ind.py  0022_question_table_col_width.py  0024_questiontype_requires_img.py  0025_questionflow_remove_question_img_id_and_more.py  0026_questionflow_form_sub_typ_questionflow_form_typ.py  0028_questionflow_single_run.py  0030_questioncondition_question_condition_typ.py  0032_graphquestiontype_question_type.py  (+15 more)
general/: cloudinary.py  discord.py  security.py  send_email.py  send_message.py
public/: urls.py  views.py
scouting/: models.py  serializers.py  urls.py  util.py  views.py
scripts/: clear-logs.sh  clear_logs.sh  dumpdata.sh  notify-users.sh  refresh-event-team-info.sh
sponsoring/: models.py  serializers.py  urls.py  util.py  views.py
src/: manage.py
tba/: models.py  serializers.py  urls.py  util.py  views.py
templates/: index.html
tests/: COMPLEX_TESTING_GUIDE.md  README.md  conftest.py  test_additional_coverage.py  test_admin_comprehensive.py  test_alerts_util_definitions.py  test_apps_comprehensive.py  test_attendance_comprehensive.py  test_attendance_integration.py  test_bulk_modules.py  test_complex_integration_scenarios.py  test_coverage_boost.py  test_coverage_push_85.py  test_final_coverage_push.py  test_form_util_comprehensive.py  test_form_views_comprehensive.py  test_general_cloudinary.py  test_general_security.py  test_general_send_message.py  test_general_util.py  test_public_api_status.py  test_public_comprehensive.py  test_scouting_admin_comprehensive.py  test_scouting_comprehensive.py  test_scouting_field_comprehensive.py  test_scouting_pit_comprehensive.py  test_scouting_portal_comprehensive.py  test_scouting_simple.py  test_scouting_views_extended.py  test_simple_coverage_additions.py  test_sponsoring_comprehensive.py  test_strategizing_comprehensive.py  test_tba_integration.py  test_tba_util_comprehensive.py  test_tba_util_extended.py  test_tba_views_comprehensive.py  test_user_comprehensive.py
user/: models.py  serializers.py  urls.py  util.py  views.py
(+424 files in other folders)
