[tool.poetry]
name = "parts-webapi"
version = "0.1.0"
description = "Putnam Area Robotics Team Web API"
authors = ["Brandon <brandon@bduke.dev>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
aiohappyeyeballs = "2.4.0"
aiohttp = "3.10.5"
aiosignal = "1.3.1"
asgiref = "3.8.1"
attrs = "24.2.0"
build = "1.2.2"
certifi = "2024.8.30"
cffi = "1.17.1"
charset-normalizer = "3.3.2"
click = "8.1.7"
cloudinary = "1.41.0"
cryptography = "43.0.1"
dj-database-url = "2.2.0"
django = "5.1.7"
django-cors-headers = "4.4.0"
django-filter = "24.3"
django-simple-history = "3.7.0"
django-webpush = "0.3.6"
djangorestframework = "3.15.2"
djangorestframework-simplejwt = "5.3.1"
frozenlist = "1.4.1"
gunicorn = "23.0.0"
http-ece = "1.2.1"
idna = "3.10"
multidict = "6.1.0"
packaging = "24.1"
pillow = "10.4.0"
pip-tools = "7.4.1"
py-vapid = "1.9.1"
pycparser = "2.22"
pyjwt = "2.9.0"
pyproject-hooks = "1.1.0"
pytz = "2024.2"
pywebpush = "2.0.0"
requests = "2.32.3"
six = "1.16.0"
sqlparse = "0.5.1"
typing-extensions = "4.12.2"
urllib3 = "2.2.3"
yarl = "1.11.1"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pipdeptree = "^2.23.4"


[tool.poetry.group.wvnet]
optional = true

[tool.poetry.group.wvnet.dependencies]
gunicorn = "23.0.0"
uwsgi = "2.0.27"
mysqlclient = "2.2.4"

[tool.poetry.group.uat]
optional = true

[tool.poetry.group.uat.dependencies]
gunicorn = "23.0.0"
uwsgi = "2.0.27"
psycopg2-binary = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
