[tool.poetry]
name = "parts-webapi"
version = "0.1.0"
description = "Putnam Area Robotics Team Web API"
authors = ["Brandon <brandon@bduke.dev>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
aiohappyeyeballs = "2.6.2"
aiohttp = "3.14.1"
aiosignal = "1.4.0"
asgiref = "3.11.1"
attrs = "26.1.0"
build = "1.5.0"
certifi = "2026.6.17"
cffi = "2.0.0"
charset-normalizer = "3.4.7"
click = "8.4.1"
cloudinary = "1.44.2"
cryptography = "49.0.0"
dj-database-url = "3.1.2"
django = "5.2.15"
django-cors-headers = "4.9.0"
django-filter = "25.2"
django-simple-history = "3.11.0"
django-webpush = "0.3.6"
djangorestframework = "3.17.1"
djangorestframework-simplejwt = "5.5.1"
frozenlist = "1.8.0"
http-ece = "1.2.1"
idna = "3.10"
multidict = "6.6.4"
packaging = "25.0"
pillow = "12.2.0"
pip="26.1.2"
pip-tools = "7.5.3"
py-vapid = "1.9.4"
pycparser = "3.0"
pyjwt = "2.13.0"
python-dotenv = "1.2.2"
pyproject-hooks = "1.2.0"
pytz = "2026.2"
pywebpush = "2.3.0"
requests = "2.34.2"
six = "1.17.0"
sqlparse = "0.5.5"
typing-extensions = "4.15.0"
urllib3 = "2.7.0"
wheel = "0.47.0"
yarl = "1.24.2"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pipdeptree = "^2.23.4"
pytest = "^8.0.0"
pytest-django = "^4.8.0"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
freezegun = "^1.5.0"
factory-boy = "^3.3.0"
requests-mock = "^1.12.0"
faker = "^33.0.0"


[tool.poetry.group.wvnet]
optional = true

[tool.poetry.group.wvnet.dependencies]
gunicorn = "26.0.0"
uwsgi = "2.0.30"
mysqlclient = "2.2.7"

[tool.poetry.group.uat]
optional = true

[tool.poetry.group.uat.dependencies]
gunicorn = "26.0.0"
uwsgi = "2.0.30"
mysqlclient = "2.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
